--- a/linktree/src/index.css
+++ b/linktree/src/index.css
@@ -14,6 +14,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+@-ms-viewport{
+  width: device-width;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,6 +31,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
